Added spanish translation

--- a/src/e_cidadania/apps/accounts/locale/es_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/accounts/locale/es_ES/LC_MESSAGES/django.po
@@ -2,97 +2,98 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-04 17:33+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2012-01-05 11:07\n"
+"Last-Translator:   <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
+"X-Translated-Using: django-rosetta 0.6.0\n"
 
 #: models.py:33
 msgid "Male"
-msgstr ""
+msgstr "Hombre"
 
 #: models.py:34
 msgid "Female"
-msgstr ""
+msgstr "Mujer"
 
 #: models.py:42
 msgid "Interes"
-msgstr ""
+msgstr "Intereses"
 
 #: models.py:54
 msgid "Name"
-msgstr ""
+msgstr "Nombre"
 
 #: models.py:55
 msgid "Surname"
-msgstr ""
+msgstr "Apellido"
 
 #: models.py:56
 msgid "Gender"
-msgstr ""
+msgstr "Género"
 
 #: models.py:59
 msgid "Birth date"
-msgstr ""
+msgstr "Fecha de nacimiento"
 
 #: models.py:63
 msgid "Province"
-msgstr ""
+msgstr "Provincia"
 
 #: models.py:64
 msgid "Region"
-msgstr ""
+msgstr "Región"
 
 #: models.py:65
 msgid "Neighborhood"
-msgstr ""
+msgstr "Barrio"
 
 #: models.py:68
 msgid "Address"
-msgstr ""
+msgstr "Dirección"
 
 #: models.py:69
 msgid "Number"
-msgstr ""
+msgstr "Número"
 
 #: models.py:71
 msgid "Floor"
-msgstr ""
+msgstr "Piso"
 
 #: models.py:72
 msgid "Letter"
-msgstr ""
+msgstr "Letra"
 
 #: models.py:75
 msgid "Phone 1"
-msgstr ""
+msgstr "Teléfono 1"
 
 #: models.py:76 models.py:78
 msgid "9 digits maximum"
-msgstr ""
+msgstr "9 dígitos máximo"
 
 #: models.py:77
 msgid "Phone 2"
-msgstr ""
+msgstr "Teléfono 2"
 
 #: models.py:80
 msgid "Identification document"
-msgstr ""
+msgstr "DNI"
 
 #: models.py:83
 msgid "Website"
-msgstr ""
+msgstr "Página web"
 
 #: models.py:85
 msgid "The URL will be checked"
-msgstr ""
+msgstr "La URL se comprobará"
