--- a/src/e_cidadania/apps/cal/locale/es_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/cal/locale/es_ES/LC_MESSAGES/django.po
@@ -2,57 +2,58 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-04 17:33+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2012-01-05 10:52\n"
+"Last-Translator:   <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
+"X-Translated-Using: django-rosetta 0.6.0\n"
 
 #: templates/cal/calendar.html:4 templates/cal/calendar.html.py:14
 msgid "Calendar"
-msgstr ""
+msgstr "Calendario"
 
 #: templates/cal/calendar.html:20
 msgid "Previous month"
-msgstr ""
+msgstr "Mes anterior"
 
 #: templates/cal/calendar.html:21
 msgid "Next month"
-msgstr ""
+msgstr "Mes siguiente"
 
 #: templates/cal/calendar.html:22
 msgid "Go back"
-msgstr ""
+msgstr "Volver"
 
 #: templates/cal/error.html:4
 msgid "Calendar error"
-msgstr ""
+msgstr "Error del calendario"
 
 #: templates/cal/error.html:8
 msgid "You entered and incorrect month or year. Please correct it."
-msgstr ""
+msgstr "Has introducido un mes o año incorrectos. Por favor corrígelos."
 
 #: templates/cal/error.html:10
 msgid "You can go"
-msgstr ""
+msgstr "Puedes ir"
 
 #: templates/cal/error.html:10
 msgid "back to home"
-msgstr ""
+msgstr "de vuelta al inicio"
 
 #: templates/cal/error.html:10
 msgid "or"
-msgstr ""
+msgstr "o"
 
 #: templates/cal/error.html:10
 msgid "back to your profile"
-msgstr ""
+msgstr "a tu perfil"
