--- a/src/e_cidadania/apps/debate/locale/es_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/debate/locale/es_ES/LC_MESSAGES/django.po
@@ -2,162 +2,163 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-04 17:33+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2012-01-05 10:30\n"
+"Last-Translator:   <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
+"X-Translated-Using: django-rosetta 0.6.0\n"
 
 #: models.py:41 models.py:102
 msgid "Title"
-msgstr ""
+msgstr "Título"
 
 #: models.py:42 templates/debate/debate_view.html:104
 msgid "Description"
-msgstr ""
+msgstr "Descripción"
 
 #: models.py:43
 msgid "Scope"
-msgstr ""
+msgstr "Ámbito"
 
 #: models.py:46 models.py:105
 msgid "Date created"
-msgstr ""
+msgstr "Fecha de creación"
 
 #: models.py:47
 msgid "Last update"
-msgstr ""
+msgstr "Última actualización"
 
 #: models.py:49
 msgid "Start date"
-msgstr ""
+msgstr "Fecha de comienzo"
 
 #: models.py:50
 msgid "End date"
-msgstr ""
+msgstr "Fecha de finalización"
 
 #: models.py:69 models.py:83
 msgid "Criteria"
-msgstr ""
+msgstr "Criterio"
 
 #: models.py:103
 msgid "Message"
-msgstr ""
+msgstr "Mensaje"
 
 #: models.py:108
 msgid "Last modification time"
-msgstr ""
+msgstr "Última vez que se modificó"
 
 #: templates/debate/debate_add.html:4
 #: templates/debate/debate_add_simple.html:4
 #: templates/debate/debate_board.html:4
 msgid "Create new debate"
-msgstr ""
+msgstr "Crear nuevo debate"
 
 #: templates/debate/debate_add.html:24 templates/debate/debate_board.html:16
 msgid "Create a new debate"
-msgstr ""
+msgstr "Crear un nuevo debate"
 
 #: templates/debate/debate_add.html:33 templates/debate/debate_board.html:23
 msgid "Remove column"
-msgstr ""
+msgstr "Eliminar columna"
 
 #: templates/debate/debate_add.html:34 templates/debate/debate_board.html:24
 msgid "Add column"
-msgstr ""
+msgstr "Añadir columna"
 
 #: templates/debate/debate_add.html:63 templates/debate/debate_board.html:56
 msgid "Remove row"
-msgstr ""
+msgstr "Eliminar fila"
 
 #: templates/debate/debate_add.html:64 templates/debate/debate_board.html:57
 msgid "Add row"
-msgstr ""
+msgstr "Añadir fila"
 
 #: templates/debate/debate_add.html:67
 #: templates/debate/debate_add_simple.html:60
 #: templates/debate/debate_board.html:66
 msgid "Other debate data"
-msgstr ""
+msgstr "Otros datos del debate"
 
 #: templates/debate/debate_add.html:127
 #: templates/debate/debate_add_simple.html:120
 #: templates/debate/debate_board.html:109
 #: templates/debate/debate_view.html:116
 msgid "Save"
-msgstr ""
+msgstr "Guardar"
 
 #: templates/debate/debate_add.html:128
 #: templates/debate/debate_add_simple.html:121
 #: templates/debate/debate_board.html:110
 msgid "Cancel"
-msgstr ""
+msgstr "Cancelar"
 
 #: templates/debate/debate_board.html:61 templates/debate/debate_view.html:120
 msgid "Add new note"
-msgstr ""
+msgstr "Añadir nueva nota"
 
 #: templates/debate/debate_board.html:62
 msgid "Add phase"
-msgstr ""
+msgstr "Añadir fase"
 
 #: templates/debate/debate_list.html:4 templates/debate/debate_list.html:12
 msgid "Debates in "
-msgstr ""
+msgstr "Debates en"
 
 #: templates/debate/debate_list.html:21
 msgid "There are no debates."
-msgstr ""
+msgstr "No hay debates"
 
 #: templates/debate/debate_list.html:25
 msgid "Go back"
-msgstr ""
+msgstr "Volver"
 
 #: templates/debate/debate_list.html:32
 msgid "previous"
-msgstr ""
+msgstr "anterior"
 
 #: templates/debate/debate_list.html:35
 msgid "of"
-msgstr ""
+msgstr "de"
 
 #: templates/debate/debate_list.html:38
 msgid "next"
-msgstr ""
+msgstr "siguiente"
 
 #: templates/debate/debate_view.html:5
 msgid "View debate"
-msgstr ""
+msgstr "Ver debate"
 
 #: templates/debate/debate_view.html:28
 msgid "Description:"
-msgstr ""
+msgstr "Descripción:"
 
 #: templates/debate/debate_view.html:29
 msgid "Scope:"
-msgstr ""
+msgstr "Ámbito:"
 
 #: templates/debate/debate_view.html:75
 msgid "Edit"
-msgstr ""
+msgstr "Editar"
 
 #: templates/debate/debate_view.html:91
 msgid "Edit note"
-msgstr ""
+msgstr "Editar nota"
 
 #: templates/debate/debate_view.html:97
 msgid "Note title"
-msgstr ""
+msgstr "Título de la nota"
 
 #: templates/debate/debate_view.html:100
 msgid "100 characters"
-msgstr ""
+msgstr "100 caracteres"
