--- a/src/e_cidadania/apps/debate/locale/es_ES/LC_MESSAGES/djangojs.po
+++ b/src/e_cidadania/apps/debate/locale/es_ES/LC_MESSAGES/djangojs.po
@@ -2,57 +2,58 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-04 17:33+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2012-01-05 11:05\n"
+"Last-Translator:   <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
+"X-Translated-Using: django-rosetta 0.6.0\n"
 
 #: static/js/debate_board.js:11
 msgid "Write here your title"
-msgstr ""
+msgstr "Escribe aquí tu título"
 
 #: static/js/debate_board.js:12
 msgid "Write here your message"
-msgstr ""
+msgstr "Escribe aquí tu mensaje"
 
 #: static/js/debate_board.js:13
 msgid "Edit"
-msgstr ""
+msgstr "Editar"
 
 #: static/js/debate_board.js:14
 msgid "There has been an error."
-msgstr ""
+msgstr "Ha habido un error."
 
 #: static/js/debate_board.js:15
 msgid "Couldn't create note."
-msgstr ""
+msgstr "No se ha podido crear la nota."
 
 #: static/js/debate_board.js:16
 msgid "Couldn't get note data."
-msgstr ""
+msgstr "No se ha podido obtener la nota."
 
 #: static/js/debate_board.js:17
 msgid "Couldn't save note."
-msgstr ""
+msgstr "No se ha podido guardar la nota."
 
 #: static/js/debate_board.js:18
 msgid "Couldn't save note position."
-msgstr ""
+msgstr "No se ha podido guardar la posición de la nota."
 
 #: static/js/debate_board.js:19
 msgid "Couldn't delete note."
-msgstr ""
+msgstr "No se ha podido eliminar la nota"
 
 #: static/js/debate_board.js:20
 msgid "Are you sure?"
-msgstr ""
+msgstr "¿Estás seguro?"
