--- a/src/e_cidadania/apps/news/locale/es_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/news/locale/es_ES/LC_MESSAGES/django.po
@@ -2,183 +2,189 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-01-04 17:33+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2012-01-05 10:57\n"
+"Last-Translator:   <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
+"X-Translated-Using: django-rosetta 0.6.0\n"
 
 #: admin.py:38
 msgid "Other data"
-msgstr ""
+msgstr "Otros datos"
 
 #: models.py:35
 msgid "Title"
-msgstr ""
+msgstr "Título"
 
 #: models.py:36
 msgid "Text"
-msgstr ""
+msgstr "Texto"
 
 #: models.py:37
 msgid "Date"
-msgstr ""
+msgstr "Fecha"
 
 #: models.py:38
 msgid "Last update"
-msgstr ""
+msgstr "Última actualización"
 
 #: models.py:39
 msgid "Author"
-msgstr ""
+msgstr "Autor"
 
 #: models.py:41
 msgid "Publish in index page"
-msgstr ""
+msgstr "Publicar en el página principal"
 
 #: models.py:42
 msgid "Publish in"
-msgstr ""
+msgstr "Publicar en "
 
 #: models.py:44
 msgid "If you want to post to the index leave this blank"
-msgstr ""
+msgstr "Si quieres publicarlo en la página principal deja esto en blanco"
 
 #: templates/news/news_list.html:4
 msgid "News list"
-msgstr ""
+msgstr "Lista de noticias"
 
 #: templates/news/news_list.html:33
 msgid "News archive"
-msgstr ""
+msgstr "Archivo de noticias"
 
 #: templates/news/news_list.html:44
 msgid "There are no posts in this space."
-msgstr ""
+msgstr "No hay entradas en este espacio."
 
 #: templates/news/news_list.html:51
 msgid "previous"
-msgstr ""
+msgstr "anterior"
 
 #: templates/news/news_list.html:54
 msgid "of"
-msgstr ""
+msgstr "de"
 
 #: templates/news/news_list.html:57
 msgid "next"
-msgstr ""
+msgstr "siguiente"
 
 #: templates/news/news_list.html:64 templates/news/post_add.html:112
 #: templates/news/post_confirm_delete.html:37
 #: templates/news/post_edit.html:139
 msgid "Go back"
-msgstr ""
+msgstr "Volver"
 
 #: templates/news/post_add.html:5 templates/news/post_add.html.py:29
 msgid "Add new post"
-msgstr ""
+msgstr "Añadir nueva entrada"
 
 #: templates/news/post_add.html:113 templates/news/post_edit.html:140
 msgid "Publish"
-msgstr ""
+msgstr "Publicar"
 
 #: templates/news/post_add.html:118
 msgid "How to add new posts"
-msgstr ""
+msgstr "Cómo añadir nuevas entradas"
 
 #: templates/news/post_add.html:120
 msgid "Title:"
-msgstr ""
+msgstr "Título:"
 
 #: templates/news/post_add.html:120
 msgid "An spectacular title! (100 characters)"
-msgstr ""
+msgstr "Un título espectacular! (100 caracteres)"
 
 #: templates/news/post_add.html:121
 msgid "Text:"
-msgstr ""
+msgstr "Texto:"
 
 #: templates/news/post_add.html:121
 msgid "Your story."
-msgstr ""
+msgstr "Tu historia."
 
 #: templates/news/post_add.html:122
 msgid "Tags:"
-msgstr ""
+msgstr "Etiquetas:"
 
 #: templates/news/post_add.html:122
 msgid "Please use them carefully, you are limited to 4 tags."
-msgstr ""
+msgstr "Por favor úsalas con cuidado, estás limitado a 4 etiquetas."
 
 #: templates/news/post_add.html:123
 msgid "Publish in index:"
-msgstr ""
+msgstr "Publicar en la página principal:"
 
 #: templates/news/post_add.html:123
 msgid ""
-"If you mark this, the post will appear in the spaces index page AND in the "
-"main index."
+"If you mark this, the post will appear in the spaces index page AND in "
+"the main index."
 msgstr ""
+"Si marcas esto, la entrada aparecerá en el índice del espacio y la "
+"página principal."
 
 #: templates/news/post_confirm_delete.html:4
 msgid "Delete news"
-msgstr ""
+msgstr "Eliminar noticias"
 
 #: templates/news/post_confirm_delete.html:32
 msgid "Delete post"
-msgstr ""
+msgstr "Eliminar entrada"
 
 #: templates/news/post_confirm_delete.html:34
 msgid ""
-"Are you sure you want to delete this post? This action cannot be undone."
+"Are you sure you want to delete this post? This action cannot be "
+"undone."
 msgstr ""
+"¿Estás seguro de querer eliminar esta entrada? Esta acción no se puede"
+" deshacer."
 
 #: templates/news/post_confirm_delete.html:38
 #: templates/news/post_detail.html:40
 msgid "Delete"
-msgstr ""
+msgstr "Eliminar"
 
 #: templates/news/post_detail.html:35
 msgid "Edit"
-msgstr ""
+msgstr "Editar"
 
 #: templates/news/post_detail.html:45
 msgid "Written by"
-msgstr ""
+msgstr "Escrito por"
 
 #: templates/news/post_detail.html:45
 msgid "on"
-msgstr ""
+msgstr "el"
 
 #: templates/news/post_detail.html:45
 msgid "comments"
-msgstr ""
+msgstr "comentarios"
 
 #: templates/news/post_detail.html:53
 msgid "Recent posts"
-msgstr ""
+msgstr "Entradas recientes"
 
 #: templates/news/post_detail.html:54
 msgid "Related posts"
-msgstr ""
+msgstr "Entradas relacionadas"
 
 #: templates/news/post_detail.html:55
 msgid "Share this post"
-msgstr ""
+msgstr "Compartir esta entrada"
 
 #: templates/news/post_edit.html:5
 msgid "Edit news"
-msgstr ""
+msgstr "Editar noticias"
 
 #: templates/news/post_edit.html:28
 msgid "Edit post"
-msgstr ""
+msgstr "Editar entrada"
