--- a/src/e_cidadania/apps/accounts/locale/es_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/accounts/locale/es_ES/LC_MESSAGES/django.po
@@ -2,21 +2,20 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+#
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-01-04 17:33+0100\n"
+"Project-Id-Version: e-cidadania 0.1.5\n"
+"Report-Msgid-Bugs-To: oscar.carballal@cidadania.coop\n"
+"POT-Creation-Date: 2012-02-28 17:13+0100\n"
 "PO-Revision-Date: 2012-01-05 11:07\n"
-"Last-Translator:   <a@a.com>\n"
+"Last-Translator:   <oscar.carballal@cidadania.coop>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: es_ES (Spanish)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
-"X-Translated-Using: django-rosetta 0.6.0\n"
 
 #: models.py:33
 msgid "Male"
@@ -93,7 +92,3 @@ msgstr "DNI"
 #: models.py:83
 msgid "Website"
 msgstr "Página web"
-
-#: models.py:85
-msgid "The URL will be checked"
-msgstr "La URL se comprobará"
