--- a/src/e_cidadania/apps/news/locale/es_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/news/locale/es_ES/LC_MESSAGES/django.po
@@ -2,20 +2,20 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+#
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-01-04 17:33+0100\n"
+"POT-Creation-Date: 2012-02-28 17:13+0100\n"
 "PO-Revision-Date: 2012-01-05 10:57\n"
 "Last-Translator:   <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
 "X-Translated-Using: django-rosetta 0.6.0\n"
 
 #: admin.py:38
@@ -126,11 +126,11 @@ msgstr "Publicar en la página principal:"
 
 #: templates/news/post_add.html:123
 msgid ""
-"If you mark this, the post will appear in the spaces index page AND in "
-"the main index."
+"If you mark this, the post will appear in the spaces index page AND in the "
+"main index."
 msgstr ""
-"Si marcas esto, la entrada aparecerá en el índice del espacio y la "
-"página principal."
+"Si marcas esto, la entrada aparecerá en el índice del espacio y la página "
+"principal."
 
 #: templates/news/post_confirm_delete.html:4
 msgid "Delete news"
@@ -142,11 +142,10 @@ msgstr "Eliminar entrada"
 
 #: templates/news/post_confirm_delete.html:34
 msgid ""
-"Are you sure you want to delete this post? This action cannot be "
-"undone."
+"Are you sure you want to delete this post? This action cannot be undone."
 msgstr ""
-"¿Estás seguro de querer eliminar esta entrada? Esta acción no se puede"
-" deshacer."
+"¿Estás seguro de querer eliminar esta entrada? Esta acción no se puede "
+"deshacer."
 
 #: templates/news/post_confirm_delete.html:38
 #: templates/news/post_detail.html:40
