--- a/src/e_cidadania/apps/proposals/locale/es_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/proposals/locale/es_ES/LC_MESSAGES/django.po
@@ -2,20 +2,20 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+#
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-01-04 17:33+0100\n"
+"POT-Creation-Date: 2012-02-28 17:13+0100\n"
 "PO-Revision-Date: 2012-01-05 11:04\n"
 "Last-Translator:   <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
 "X-Translated-Using: django-rosetta 0.6.0\n"
 
 #: admin.py:45
@@ -93,13 +93,13 @@ msgstr "Añadir nueva propuesta"
 
 #: templates/proposals/proposal_add.html:124
 #: templates/proposals/proposal_confirm_delete.html:26
-#: templates/proposals/proposal_edit.html:137
+#: templates/proposals/proposal_edit.html:139
 #: templates/proposals/proposal_list.html:47
 msgid "Go back"
 msgstr "Volver"
 
 #: templates/proposals/proposal_add.html:125
-#: templates/proposals/proposal_edit.html:138
+#: templates/proposals/proposal_edit.html:140
 msgid "Publish"
 msgstr "Publicar"
 
@@ -109,11 +109,11 @@ msgstr "Admins/Moderadores leed esto"
 
 #: templates/proposals/proposal_add.html:131
 msgid ""
-"There are a lot more options in the proposals but they will appear only"
-" when you edit the proposal."
+"There are a lot more options in the proposals but they will appear only when "
+"you edit the proposal."
 msgstr ""
-"Hay muchas más opciones en las propuestas pero sólo aparecerán cuando "
-"se edite la propuesta."
+"Hay muchas más opciones en las propuestas pero sólo aparecerán cuando se "
+"edite la propuesta."
 
 #: templates/proposals/proposal_add.html:133
 msgid "How to add new proposals"
@@ -125,8 +125,8 @@ msgstr "Título resumiendo la propuesta, sé conciso (50 caracteres)"
 
 #: templates/proposals/proposal_add.html:136
 msgid ""
-"Describe here your proposal with detail. You can add images or any "
-"other content."
+"Describe here your proposal with detail. You can add images or any other "
+"content."
 msgstr ""
 "Describe aquí tu propuesta con detalle. Puedes añadir imágenes u otro "
 "contenido."
@@ -138,8 +138,7 @@ msgstr "Latitud/Longitud"
 #: templates/proposals/proposal_add.html:137
 msgid "You'll have to put this if you want to locate the proposal in a map."
 msgstr ""
-"Tendrás que poner estos datos si quieres localizar la propuesta en un "
-"mapa."
+"Tendrás que poner estos datos si quieres localizar la propuesta en un mapa."
 
 #: templates/proposals/proposal_add.html:138
 msgid "Tags"
@@ -147,11 +146,11 @@ msgstr "Etiquetas"
 
 #: templates/proposals/proposal_add.html:138
 msgid ""
-"Relevant tags for the proposal, p.e. where the proposal is localted, "
-"what is related to it, etc."
+"Relevant tags for the proposal, p.e. where the proposal is localted, what is "
+"related to it, etc."
 msgstr ""
-"Etiquetas relevantes para la propuesta, ej: dónde está localizada, "
-"cosas ralacionadas, etc."
+"Etiquetas relevantes para la propuesta, ej: dónde está localizada, cosas "
+"ralacionadas, etc."
 
 #: templates/proposals/proposal_confirm_delete.html:4
 #: templates/proposals/proposal_confirm_delete.html:21
@@ -160,11 +159,10 @@ msgstr "Eliminar propuesta"
 
 #: templates/proposals/proposal_confirm_delete.html:23
 msgid ""
-"Are you sure you want to delete this proposal? This action cannot be "
-"undone."
+"Are you sure you want to delete this proposal? This action cannot be undone."
 msgstr ""
-"¿Estás seguro de querer eliminar esta propuesta? Esta acción no se "
-"puede deshacer."
+"¿Estás seguro de querer eliminar esta propuesta? Esta acción no se puede "
+"deshacer."
 
 #: templates/proposals/proposal_confirm_delete.html:27
 #: templates/proposals/proposal_list.html:22
